remove some unused files and work on controller
