# Reprecord.Backend/src/model/exercise.ts
@@ -1,73 +1,0 @@
-/**
- * Gym Workout Tracker API
- * API for managing gym workouts, exercise logs, and user progress.
- *
- * The version of the OpenAPI document: 1.0.0
- * 
- *
- * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
- * https://openapi-generator.tech
- * Do not edit the class manually.
- */
-
-// import { RequestFile } from './models';
-
-export class Exercise {
-    'id'?: string;
-    'workoutPlanId'?: string;
-    'name'?: string;
-    'sets'?: number;
-    'reps'?: number;
-    'weight'?: number;
-    'createdAt'?: Date;
-    'updatedAt'?: Date;
-
-    static discriminator: string | undefined = undefined;
-
-    static attributeTypeMap: Array<{name: string, baseName: string, type: string}> = [
-        {
-            "name": "id",
-            "baseName": "id",
-            "type": "string"
-        },
-        {
-            "name": "workoutPlanId",
-            "baseName": "workoutPlanId",
-            "type": "string"
-        },
-        {
-            "name": "name",
-            "baseName": "name",
-            "type": "string"
-        },
-        {
-            "name": "sets",
-            "baseName": "sets",
-            "type": "number"
-        },
-        {
-            "name": "reps",
-            "baseName": "reps",
-            "type": "number"
-        },
-        {
-            "name": "weight",
-            "baseName": "weight",
-            "type": "number"
-        },
-        {
-            "name": "createdAt",
-            "baseName": "createdAt",
-            "type": "Date"
-        },
-        {
-            "name": "updatedAt",
-            "baseName": "updatedAt",
-            "type": "Date"
-        }    ];
-
-    static getAttributeTypeMap() {
-        return Exercise.attributeTypeMap;
-    }
-}
-
