# Reprecord.Backend/src/model/log.ts
@@ -1,73 +1,0 @@
-/**
- * Gym Workout Tracker API
- * API for managing gym workouts, exercise logs, and user progress.
- *
- * The version of the OpenAPI document: 1.0.0
- * 
- *
- * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
- * https://openapi-generator.tech
- * Do not edit the class manually.
- */
-
-// import { RequestFile } from './models';
-
-export class Log {
-    'id'?: string;
-    'userId'?: string;
-    'workoutPlanId'?: string;
-    'exerciseId'?: string;
-    'date'?: string;
-    'sets'?: number;
-    'reps'?: number;
-    'weight'?: number;
-
-    static discriminator: string | undefined = undefined;
-
-    static attributeTypeMap: Array<{name: string, baseName: string, type: string}> = [
-        {
-            "name": "id",
-            "baseName": "id",
-            "type": "string"
-        },
-        {
-            "name": "userId",
-            "baseName": "userId",
-            "type": "string"
-        },
-        {
-            "name": "workoutPlanId",
-            "baseName": "workoutPlanId",
-            "type": "string"
-        },
-        {
-            "name": "exerciseId",
-            "baseName": "exerciseId",
-            "type": "string"
-        },
-        {
-            "name": "date",
-            "baseName": "date",
-            "type": "string"
-        },
-        {
-            "name": "sets",
-            "baseName": "sets",
-            "type": "number"
-        },
-        {
-            "name": "reps",
-            "baseName": "reps",
-            "type": "number"
-        },
-        {
-            "name": "weight",
-            "baseName": "weight",
-            "type": "number"
-        }    ];
-
-    static getAttributeTypeMap() {
-        return Log.attributeTypeMap;
-    }
-}
-
